[project]
name = "anqush"
version = "0.1.0"
description = "Control layer for AI agents with budget limits, approval workflows, and audit logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.29.0",
]

[tool.uv]
package = false
